GNOME Bugzilla – Bug 702564
tons of warning messages in journalctl ... meta_screen_get_monitor_geometry: assertion `monitor >= 0 ...' failed
Last modified: 2013-06-24 15:32:44 UTC
Description of problem: When I run journalctl -f as normal user I get thousands (new at least in second internal) messages like Jun 17 23:16:57 wycliff.ceplovi.cz /etc/gdm/Xsession[1704]: Window manager warning: Log level 8: meta_screen_get_monitor_geometry: assertion `monitor >= 0 ...' failed Version-Release number of selected component (if applicable): gnome-shell-3.8.2-4.el7.x86_64 How reproducible: 100% Steps to Reproduce: 1.run journalctl -f 2. 3. Actual results: thousands of lines like shown above Expected results: no warnings, useful log Also filed as https://bugzilla.redhat.com/show_bug.cgi?id=975453
I have looked at this a bit ... just to confirm my theory do have any (legacy) icons in the tray? They are off screen while the tray is hidden causing them to have an uninitialized monitor number.
And do you have more than one monitor?
a) not sure what do you mean as a tray; I use plain gnome-shell (not the Classic mode), b) yes, I have external monitor and use it in dual-monitor (non-mirroring) setup.
Created attachment 247599 [details] [review] window: Make sure override_redirect window have correct monitor info We need to update window->monitor on override_redirect windows as well, other wise they may end up with an invalid struct which triggers and assert when meta_window_is_monitor_sized is called. --- OK, this has nothing to do with offscreen tray icons. We don't update the monitor info on override redirect windows (which the tray icons are which is why I have suspected them) when the monitor / screen size changes. This patch fixes this.
(In reply to comment #3) > a) not sure what do you mean as a tray; I use plain gnome-shell (not the > Classic mode), I mean the icons (like pidgin, xchat, dropbox in the message tray). > b) yes, I have external monitor and use it in dual-monitor (non-mirroring) > setup. OK. Anyway found the bug see patch.
Created attachment 247600 [details] [review] window: Make sure override_redirect window have correct monitor info We need to update window->monitor on override_redirect windows as well, other wise they may end up with an invalid struct which triggers and assert when meta_window_is_monitor_sized is called.
Created attachment 247651 [details] [review] window: Make sure override_redirect window have correct monitor info We need to update window->monitor on override_redirect windows as well, other wise they may end up with an invalid struct which triggers and assert when meta_window_is_monitor_sized is called.
Created attachment 247652 [details] [review] window: Make sure override_redirect window have correct monitor info We need to update window->monitor on override_redirect windows as well, other wise they may end up with an invalid struct which triggers and assert when meta_window_is_monitor_sized is called.
Review of attachment 247652 [details] [review]: OK, this versions LGTM
Attachment 247652 [details] pushed as 8ab136b - window: Make sure override_redirect window have correct monitor info